<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Mathlete!</string>
    <string name="action_settings">Settings</string>
    <string name="menuSettings">Difficulty</string>
    <string name="buttonStartAddition">Addition</string>
    <string name="buttonStartSubtraction">Subtraction</string>
    <string name="buttonStartMultiplication">Multiplication</string>
    <string name="buttonStartDivision">Division</string>
    <string name="buttonStartNumberOne">Number One</string>
    <string name="button_one">1</string>
    <string name="title_activity_display_ran">DisplayRan</string>
    <string name="welcome_title">Welcome to</string>
    <string name="game_over">Game Over!</string>
    <string name="game_over_score">Score = </string>
    <string name="title_activity_game_over_screen">GameOverScreen</string>
    <string name="buttonGameOverRestart">Restart</string>
    <string name="buttonGameOverHomeRestart">Main Menu</string>
    <string name="title_activity_number_one">NumberOne</string>
    <string name="hello_world">Hello world!</string>

</resources>
