<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/gameOverView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="@color/Black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/gameOverScoreView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_over_score"
        android:textColor="@color/Green"
        android:textSize="40sp" />
    
    <Button
	        android:id="@+id/restartButton"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="25dp"
	        android:gravity="center"
	        android:onClick="runRestart"
	        android:text="@string/buttonGameOverRestart" />
     <Button
	        android:id="@+id/restartHomeButton"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="25dp"
	        android:gravity="center"
	        android:onClick="runHomeRestart"
	        android:text="@string/buttonGameOverHomeRestart" />

</LinearLayout>
