<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/BlackOverlay" 
    android:orientation="vertical">
    
    
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    
	    >
	    
	    <TextView
	    android:id="@+id/welcomeText"
	    android:textSize="25sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:gravity="center"
        />
	    
	    <TextView
	    android:layout_below="@+id/welcomeText"
	    android:id="@+id/welcomeText2"
	    android:textSize="25sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:gravity="center"
        />

	    <Button
	        android:id="@+id/additionButton"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/welcomeText"
	        android:layout_marginTop="25dp"
	        android:gravity="center"
	        android:onClick="runAddition"
	        android:text="@string/buttonStartAddition" 
	       />
	    
	    <Button
	        android:id="@+id/subtractionButton"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/additionButton"
	        android:layout_marginTop="25dp"
	        android:gravity="center"
	        android:onClick="runSubtraction"
	        android:text="@string/buttonStartSubtraction" />
	    
	    </RelativeLayout>
   
    

    
    

</LinearLayout>
